1. 实现网页引用作为上下文功能 2. 实现模型配置和切换功能

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.40",
+    "@langchain/openai": "^0.4.4",
+    "marked": "^9.1.5",
     "vue": "^3.3.4"
   },
   "devDependencies": {
