--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Web AI Assistant",
   "version": "1.0.0",
-  "description": "A Vue-based Chrome extension with AI-powered sidepanel",
+  "description": "A Vue-based Chrome extension with AI-powered sidebar",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
@@ -10,24 +10,37 @@
     "64": "icons/icon64.png"
   },
   "permissions": [
-    "sidePanel",
     "activeTab",
     "contextMenus",
     "tabs"
   ],
-  "side_panel": {
-    "default_path": "sidepanel.html"
-  },
-  "action": {
-    "default_title": "Web AI Assistant"
+  "web_accessible_resources": [
+    "popup.html"
+  ],
+  "content_security_policy": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'",
+  "browser_action": {
+    "default_title": "Web AI Assistant",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "64": "icons/icon64.png"
+    }
   },
   "background": {
-    "service_worker": "assets/background.js"
+    "scripts": [
+      "assets/background.js"
+    ],
+    "persistent": true
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["assets/content_script.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "assets/content_script.js"
+      ]
     }
   ]
 }
