1. 修复停止响应异常问题 2. 修复模型配置变化未更新问题 3. 增加options页面

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
   "permissions": [
     "activeTab",
     "contextMenus",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "web_accessible_resources": [
     "popup.html"
@@ -42,5 +43,6 @@
         "assets/content_script.js"
       ]
     }
-  ]
+  ],
+  "options_page": "options.html"
 }
